Fixed footer layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 
 :root {
   --color-bg: #f5f5dc;
-  --color-aboutbg : #f1eadd;
+  --color-aboutbg : #e6d9c3;
   --color-navy: #001f3f;
   --color-text: #333333;
 }
